logs/dag_id=update_dwh/run_id=manual__2023-10-23T17:48:16.286339+00:00/task_id=sat_employee_social_performance_update/attempt=1.log
[2023-10-23T17:48:28.423+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: update_dwh.sat_employee_social_performance_update manual__2023-10-23T17:48:16.286339+00:00 [queued]>
[2023-10-23T17:48:28.434+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: update_dwh.sat_employee_social_performance_update manual__2023-10-23T17:48:16.286339+00:00 [queued]>
[2023-10-23T17:48:28.435+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-10-23T17:48:28.449+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): sat_employee_social_performance_update> on 2023-10-23 17:48:16.286339+00:00
[2023-10-23T17:48:28.459+0000] {standard_task_runner.py:57} INFO - Started process 4483 to run task
[2023-10-23T17:48:28.470+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'update_dwh', 'sat_employee_social_performance_update', 'manual__2023-10-23T17:48:16.286339+00:00', '--job-id', '241', '--raw', '--subdir', 'DAGS_FOLDER/update_dwh_dag.py', '--cfg-path', '/tmp/tmp805zc2i5']
[2023-10-23T17:48:28.474+0000] {standard_task_runner.py:85} INFO - Job 241: Subtask sat_employee_social_performance_update
[2023-10-23T17:48:28.558+0000] {task_command.py:416} INFO - Running <TaskInstance: update_dwh.sat_employee_social_performance_update manual__2023-10-23T17:48:16.286339+00:00 [running]> on host 1f8bb8a692af
[2023-10-23T17:48:28.651+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='update_dwh' AIRFLOW_CTX_TASK_ID='sat_employee_social_performance_update' AIRFLOW_CTX_EXECUTION_DATE='2023-10-23T17:48:16.286339+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-10-23T17:48:16.286339+00:00'
[2023-10-23T17:48:28.652+0000] {sql.py:274} INFO - Executing: 
INSERT INTO TABLE rdv.sat_employee_social_performance
SELECT DISTINCT
	md5(so.employeenumber::text),
	'csv',
	now(),
	so.environmentsatisfaction,
	so.jobsatisfaction,
	so.relationshipsatisfaction,
	so.worklifebalance
FROM
    staging.stg_table so
LEFT OUTER JOIN rdv.sat_employee_social_performance sat ON (sat.employee_hash_key = md5(so.employeenumber::text) AND sat.created_at IS NULL)
where 
	coalesce(so.environmentsatisfaction, 0) != coalesce(sat.environment_satisfaction, 0) or
	coalesce(so.jobsatisfaction, 0) != coalesce(sat.job_satisfaction, 0) or
	coalesce(so.relationshipsatisfaction, 0) != coalesce(sat.relationship_satisfaction, 0) or
	coalesce(so.worklifebalance, 0) != coalesce(sat.work_life_balance, 0)
[2023-10-23T17:48:28.662+0000] {base.py:73} INFO - Using connection ID 'stg_conn' for task execution.
[2023-10-23T17:48:28.663+0000] {warnings.py:109} WARNING - /home/***/.local/lib/python3.8/site-packages/***/models/connection.py:374: AirflowProviderDeprecationWarning: The "schema" arg has been renamed to "database" as it contained the database name.Please use "database" to set the database name.
  return hook_class(**{hook.connection_id_attribute_name: self.conn_id}, **hook_params)

[2023-10-23T17:48:28.679+0000] {base.py:73} INFO - Using connection ID 'stg_conn' for task execution.
[2023-10-23T17:48:28.754+0000] {sql.py:418} INFO - Running statement: 
INSERT INTO TABLE rdv.sat_employee_social_performance
SELECT DISTINCT
	md5(so.employeenumber::text),
	'csv',
	now(),
	so.environmentsatisfaction,
	so.jobsatisfaction,
	so.relationshipsatisfaction,
	so.worklifebalance
FROM
    staging.stg_table so
LEFT OUTER JOIN rdv.sat_employee_social_performance sat ON (sat.employee_hash_key = md5(so.employeenumber::text) AND sat.created_at IS NULL)
where 
	coalesce(so.environmentsatisfaction, 0) != coalesce(sat.environment_satisfaction, 0) or
	coalesce(so.jobsatisfaction, 0) != coalesce(sat.job_satisfaction, 0) or
	coalesce(so.relationshipsatisfaction, 0) != coalesce(sat.relationship_satisfaction, 0) or
	coalesce(so.worklifebalance, 0) != coalesce(sat.work_life_balance, 0), parameters: None
[2023-10-23T17:48:28.775+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "TABLE"
LINE 2: INSERT INTO TABLE rdv.sat_employee_social_performance
                    ^

[2023-10-23T17:48:28.785+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=update_dwh, task_id=sat_employee_social_performance_update, execution_date=20231023T174816, start_date=20231023T174828, end_date=20231023T174828
[2023-10-23T17:48:28.796+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 241 for task sat_employee_social_performance_update (syntax error at or near "TABLE"
LINE 2: INSERT INTO TABLE rdv.sat_employee_social_performance
                    ^
; 4483)
[2023-10-23T17:48:28.844+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-10-23T17:48:28.872+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
